deploy/manifests/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: otus-pod
  labels:
    app: otus
spec:
  containers:
    - name: otus
      image: arslanov92/otus_homework:0.0.9
      ports:
        - containerPort: 8000
